--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -41,10 +41,7 @@
 
     <footer class="l-footer">
       <div class="l-container">
-        <p></p>
-        <aside>
-          <p>Robust designed by Daisuke Tsuji {{ with .Site.Copyright }}{{ . | safeHTML }}{{ else }}<span class="h-logo">&copy; {{ .Site.Copyright }}</span>{{ end }}</p>
-        </aside>
+          <p>&copy; 2019 hirotatsu.me Robust designed by Daisuke Tsuji</p>
       </div>
     </footer>
 
