--- a/layouts/partials/others.html
+++ b/layouts/partials/others.html
@@ -2,6 +2,9 @@
   <header>OTHERS</header>
   <div>
     <div class="articles sm">
+        {{ with .Site.GetPage "pages" "about-site.md" }}
+        {{ .Render "li_sm" }}
+        {{ end }}
       {{ with .Site.GetPage "pages" "privacy-policy.md" }}
       {{ .Render "li_sm" }}
       {{ end }}
