--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -41,7 +41,7 @@
 
     <footer class="l-footer">
       <div class="l-container">
-          <p>Robust designed by Daisuke Tsuji  Copyright &copy; 2019 hirotatsu.me</p>
+          <p class="copyright">Copyright &copy; 2019 hirotatsu.me Robust designed by Daisuke Tsuji</p>
       </div>
     </footer>
 
