--- a/layouts/partials/custom.css
+++ b/layouts/partials/custom.css
@@ -1,5 +1,5 @@
 a {
-  color: #696969;
+  color: #4682B4;
   text-decoration: none;
   transition-duration: .3s;
 }
@@ -15,11 +15,13 @@ html {
 }
 
 article.sn > .article-body strong {
-  box-shadow: 0 -.5rem 0 0 #ffc107 inset;
+  font-weight: bold;
+  color: black;
+  box-shadow: none;
 }
 
 article.sn > .article-body em {
-  color: #ff4500;
+  box-shadow: 0 -.3rem 0 0 #ffc107 inset;
 }
 
 .p-logo {
@@ -86,4 +88,8 @@ a.ln {
   font-size: .7rem;
   margin-left: 3px;
   margin-right: 3px;
+}
+
+.logo {
+  margin-top: 15px;
 }
