--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -12,7 +12,10 @@
 
     <div class="articles">
       <div class="mrow">
-        {{ range (.Paginate .Data.Pages).Pages }}
+        {{ $pctx := . }}
+        {{ if .IsHome }}{{ $pctx = .Site }}{{ end }}
+        {{ $paginator := .Paginate $pctx.RegularPages }}
+        {{ range $paginator.Pages }}
         <div class="mcol c6">{{ .Render "li" }}</div>
         {{ end }}
       </div>
@@ -25,4 +28,3 @@
   </div>
 </div>
 {{ end }}
-
